--- a/generators/lib/templates/package.json
+++ b/generators/lib/templates/package.json
@@ -6,7 +6,7 @@
     "test": "mocha -b -r ts-node/register test/**/*.ts",
     "build": "tsc",
     "clean": "rm -rf dist tsconfig.tsbuildinfo",
-    "build:clean": "npm run build && npm run build",
+    "build:clean": "npm run clean && npm run build",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "npm run lint -- --fix"
   },
